# sway.module_ois

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  index.html
docs/doxygen/: doxyfile.doxy
examples/01/: CMakeLists.txt  README.md  main.cpp
include/sway/: ois.h
include/sway/ois/: devicetypes.h  inputdevicebase.h  inputdevicemacros.h  inputdevicemanager.h  inputdevicemanager.inl  inputdevicetypes.h  inputevents.h  inputlistener.h  inputmanager.h  keyboard.h  keyboardlistener.h  keycodes.h  keymapping.h  keymappinglist.h  mouse.h  mouselistener.h  prereqs.h  typedefs.h
lib/: exports.json  runtime_exports.json
lib/cpp/include/sway/: ois.hpp
lib/cpp/include/sway/ois/: inputdevicemacros.hpp  inputdevicemanager.hpp  inputdevicetypes.hpp  inputevents.hpp  inputlistener.hpp  prereqs.hpp
lib/cpp/include/sway/ois/mac/: dtpmouse.hpp
lib/cpp/include/sway/ois/web/: emskeyboard.hpp  emsmouse.hpp
lib/cpp/src/: inputdevicemanager.cpp
lib/cpp/src/mac/: dtpkeyboard.cpp  dtpmouse.cpp
lib/cpp/src/web/: emsmouse.cpp
lib/cxx/: CMakeLists.txt
lib/cxx/include/sway/: ois.hpp  oismacros.hpp
lib/cxx/include/sway/ois/: inputactionstates.hpp  inputactiontypes.hpp  inputbuttonstates.hpp  inputdevice.hpp  inputdevicemanager.hpp  inputdevicetypes.hpp  inputeventargs.hpp  inputeventparams.hpp  inputevents.hpp  inputlistener.hpp  keyboardeventargs.hpp  keyboardeventparams.hpp  keycodes.hpp  keymodifiers.hpp  mousebuttoncodes.hpp  mousebuttons.hpp  mouseeventargs.hpp  mouseeventparams.hpp  mousewheelscrollactions.hpp  touchstate.hpp  typedefs.hpp
lib/cxx/include/sway/ois/events/: eventbus.hpp  eventhandler.hpp  inputevent.hpp  keyevent.hpp  keyeventhandler.hpp  mouseevent.hpp
lib/cxx/include/sway/ois/mac/: dtpkeyboard.hpp  dtpkeymappinglist.hpp  dtpmouse.hpp
lib/cxx/include/sway/ois/web/: emskeyboard.hpp  emsmouse.hpp
lib/cxx/src/mac/: dtpkeyboard.cpp  dtpmouse.cpp
lib/cxx/src/web/: emskeyboard.cpp  emsmouse.cpp
lib/cxx/tests/google/: CMakeLists.txt  README.md  inputdevice.spec.cpp  inputeventlistener.spec.cpp
lib/include/sway/: ois.hpp
lib/include/sway/ois/: inputdevice.hpp  inputdevicebase.hpp  inputdevicemacros.hpp  inputdevicemanager.hpp  inputdevicemanager.inl  inputdevicetypes.hpp  inputevents.hpp  inputlistener.hpp  keyboard.hpp  keyboardeventargs.hpp  keycodes.hpp  keymapping.hpp  keymappinglist.hpp  mouse.hpp  prereqs.hpp  typedefs.hpp
lib/include/sway/ois/mac/: dtpinputdevicemanager.hpp  dtpinputdevicemanager.inl  dtpkeyboard.hpp  dtpkeymappinglist.hpp  dtpmouse.hpp
lib/include/sway/ois/web/: emsinputdevicemanager.hpp  emsmouse.hpp
lib/src/: inputdevicemanager.cpp  keyboard.cpp  mouse.cpp
lib/src/mac/: dtpinputdevicemanager.cpp  dtpkeyboard.cpp  dtpmouse.cpp
lib/src/web/: emsinputdevicemanager.cpp  emskeyboard.cpp  emsmouse.cpp
scripts/travis/: install-cmake.sh
src/: inputdevicemanager.cpp  inputmanager.cpp  keyboard.cpp  mouse.cpp
